Compile for Java 8